modify sample codes highlighted

--- a/_posts/2012-11-08-01-52-30-what_is_test_name.markdown
+++ b/_posts/2012-11-08-01-52-30-what_is_test_name.markdown
@@ -3,10 +3,10 @@
 
 これな
 
-    　
+<pre class="brush: perl">
     Test::More tests => 1;
 
     is(1 + 1, 2, 'one plus one is two');
-                  ~~~~~~~~~~~~~~~~~~~~
+</pre>
 
 説明文。みんな何て読んでるの？
