--- a/_posts/2012-11-08-01-55-00-level1.markdown
+++ b/_posts/2012-11-08-01-55-00-level1.markdown
@@ -3,7 +3,7 @@
 
 とりあえず書いてみる
 
-    　
+<pre class="brush: perl">
     use strict;
     use warnings;
     use utf8;
@@ -13,6 +13,6 @@
     is(1 + 1, 2, "足し算");
 
     done_testing;
-    　
+</pre>
 
 
