--- a/_posts/2012-11-08-01-56-43-warning1.markdown
+++ b/_posts/2012-11-08-01-56-43-warning1.markdown
@@ -1,14 +1,12 @@
 ワーニング！
 ============
 
-    　
+<pre class="brush: plain">
     $ prove level1.t
-    level1.t .. 1/? Wide character in print at
-    /home/kozaki/perl5/perlbrew/perls/perl-5.16.1/lib/5.16.1/Test/Builder.pm
-    line 1759.
+    level1.t .. 1/? Wide character in print at /home/kozaki/perl5/perlbrew/perls/perl-5.16.1/lib/5.16.1/Test/Builder.pm line 1759.
     level1.t .. ok
     All tests sccessful.
-    　
+</pre>
 
 <br />
 
