--- a/_posts/2012-11-08-02-05-18-level2.markdown
+++ b/_posts/2012-11-08-02-05-18-level2.markdown
@@ -3,7 +3,7 @@
 
 よくわからんまま呪文を唱える レベル２
 
-    　
+<pre class="brush: perl">
     use strict;
     use warnings;
     use utf8;
@@ -16,4 +16,4 @@
     is(1 + 1, 2, "足し算");
 
     done_testing;
-    　
+</pre>
