--- a/_posts/2012-11-08-02-07-26-fail2.markdown
+++ b/_posts/2012-11-08-02-07-26-fail2.markdown
@@ -3,14 +3,12 @@
 
 あれ？
 
-    　
+<pre class="brush: plain">
     prove level2.t
-    level2.t .. 1/? Wide character in print at
-    /home/kozaki/perl5/perlbrew/perls/perl-5.16.1/lib/5.16.1/Test/Builder.pm
-    line 1759.
+    level2.t .. 1/? Wide character in print at /home/kozaki/perl5/perlbrew/perls/perl-5.16.1/lib/5.16.1/Test/Builder.pm line 1759.
     level2.t .. ok
     All tests successful.
-    　
+</pre>
 
 <br />
 
