--- a/_posts/2012-11-08-02-14-23-subtest_fail.markdown
+++ b/_posts/2012-11-08-02-14-23-subtest_fail.markdown
@@ -3,7 +3,7 @@
 
 構造化されたテストを書くべく subtest を使用
 
-    　
+<pre class="brush: perl">
     use warnings;
     use strict;
     use utf8;
@@ -19,4 +19,4 @@
     };
 
     done_testing;
-    　
+</pre>
