--- a/_posts/2012-11-08-02-23-18-conclusion.markdown
+++ b/_posts/2012-11-08-02-23-18-conclusion.markdown
@@ -3,7 +3,7 @@
 
 もうこれでいいじゃん
 
-    　
+<pre class="brush: perl">
     use warnings;
     use strict;
     use utf8;
@@ -20,4 +20,4 @@
     };
 
     done_testing;
-    　
+</pre>
