--- a/_posts/2012-11-08-02-11-37-i_got_it.markdown
+++ b/_posts/2012-11-08-02-11-37-i_got_it.markdown
@@ -3,7 +3,7 @@
 
 さすがは google さんや。
 
-    　
+<pre class="brush: plain">
     $ prove level3.t -v
     level3.t ..
     ok 1 - 足し算
@@ -12,4 +12,4 @@
     All tests successful.
     Files=1, Tests=1,  0 wallclock secs ( 0.03 usr  0.01 sys +  0.04 cusr  0.01 csys =  0.09 CPU)
     Result: PASS
-    　
+</pre>
